tests/NormalTests/paczka1/small_fuzzy/38288965.err
Error in line 1: cNh A656 90,3
Error in line 6: QGL A656 87,5
